# stock-screener

./: CLAUDE.md  README.md  pyproject.toml
data/: tickers.json
src/stock_screener/: __init__.py  __main__.py  app.py  main.py
src/stock_screener/models/: stock.py
src/stock_screener/services/: yahoo_finance.py
src/stock_screener/ui/: theme.py
src/stock_screener/ui/components/: detail_panel.py  search_dialog.py  watchlist_panel.py
src/stock_screener/utils/: __init__.py
tests/: test_services.py
