[project]
name = "stock-screener"
version = "0.1.0"
description = "Desktop stock observation application"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2",
    "tk>=0.1.0",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
